Update API move integer to string choices
